# my_pcl

./: CMakeLists.txt  README.md  \  package.xml
pcd_materials/: chocolate.pcd  chocolate_rendered.pcd  chocolate_rendered.ply  cokecan1.pcd  cokecan1.ply  cokecan_from_scene.pcd  cokecan_from_scene_inlier.pcd  cokecan_scene_downsampled.pcd  hahah.pcd  monkey.ply  my_range_image.pcd  passthrough_test_scene.pcd  simplified_cokecan_scene.pcd  small_chocolate.ply  table_scene_lms400_plane_0.pcd  table_scene_mug_stereo_textured_cylinder.pcd  table_scene_mug_stereo_textured_plane.pcd  test_scene.pcd  test_scene_without_planar.pcd  test_scene_y.pcd
src/: alignment_prerejective.cpp  build_tree.cpp  cloud_viewer.cpp  cluster_extraction.cpp  cokecan_without_end_face.pcd  correspondence_grouping.cpp  crophull.cpp  crophull.cpp~  cylinder_segmentation.cpp  example.cpp  example1.cpp  extract_indices.cpp  general_matrix_transform.cpp  interactive_icp.cpp  iterative_closest_point.cpp  kdtree_search.cpp  matrix_transform.cpp  matrix_transform.cpp~  min_cut_segmentation.cpp  moment_of_inertia.cpp  nearest_neighbors.cpp  normal_estimation_using_integral_images.cpp  obj2pcd.cpp  openni_grabber.cpp  openni_viewer_simple.cpp  pairwise_incremental_registration.cpp  passthrough.cpp  pcl_plotter.cpp  planar_segmentation.cpp  ply2pcd.cpp  project_inliers.cpp  publish_cube5cm.cpp  publish_cube5cm.cpp~  publish_transform_matrix_from_scene _cube5cm.cpp~  publish_transform_matrix_from_scene.cpp  range_image_border_extraction.cpp  range_image_creation.cpp  range_image_visualization.cpp  region_growing_rgb_segmentation.cpp  region_growing_segmentation.cpp  (+7 more)
